# project_reco_movie_streamlit

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Streamlit/: style.css
data/processed/: dataframe_streamlit.parquet  dataframe_streamlit.pkl  dataframe_v1.csv  dataframe_v2.csv  dataframe_v2.pkl  movies_db.csv
src/: fonctions_api.py
src/NLP_training/: NLP.py  genre_docu.py
src/create_bdd_streamlit/: export_title_language.py  nettoyage_fusion_title.py
src/explore/: Decouverte_BDD.py
src/preprocessing/: Create_df.py  Create_dictionnary_actor.py  df_actors.py  join_and_language.py  join_df_v1_with_df_actors.py  nettoyage_df_v4.py
src/training_ml/: ML_SVD_fonctionnel.ipynb  ml_svd.py  train_nn.py
