[project]
name = "projet-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "en-core-web-sm",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9.2",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.6.0",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
    "spacy>=3.8.0",
    "streamlit>=1.40.0",
    "streamlit-authenticator>=0.4.0",
    "streamlit-option-menu>=0.4.0",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
